data/derived/sp14/progs/unify/prog2715.ml.out
Characters 72-76:
  List.fold_left f base xs;;
                   ^^^^
Error: This expression has type float but an expression was expected of type
         float -> float -> float
